--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,17 +37,26 @@ jobs:
             
             Download the binary for your platform below and add it to your PATH.
             
+            **Linux/macOS:**
+            ```bash
+            tar xzf netshield-analyzer-${{ steps.get_version.outputs.version }}-linux-amd64.tar.gz
+            sudo mv netshield-analyzer /usr/local/bin/
+            ```
+            
+            **Windows:**
+            Extract the zip and add the folder to your PATH.
+            
             ### Verify Installation
             
             ```bash
-            netshield --help
+            netshield-analyzer --help
             ```
             
             ### Quick Start
             
             ```bash
             cd /path/to/your/maven/project
-            netshield --packages com.yourcompany
+            netshield-analyzer --packages com.yourcompany
             ```
             
             See the [README](https://github.com/Netshield-Enterprise/netshield-analyzer/blob/main/README.md) for full documentation.
@@ -104,17 +113,17 @@ jobs:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
         run: |
-          go build -ldflags="-s -w -X main.Version=${{ needs.release.outputs.version }}" -o netshield${{ matrix.goos == 'windows' && '.exe' || '' }} ./cmd/analyzer
+          go build -ldflags="-s -w -X main.Version=${{ needs.release.outputs.version }}" -o netshield-analyzer${{ matrix.goos == 'windows' && '.exe' || '' }} ./cmd/analyzer
 
       - name: Create archive (Unix)
         if: matrix.goos != 'windows'
         run: |
-          tar czf netshield-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz netshield LICENSE README.md
+          tar czf netshield-analyzer-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz netshield-analyzer LICENSE README.md
 
       - name: Create archive (Windows)
         if: matrix.goos == 'windows'
         run: |
-          7z a netshield-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.zip netshield.exe LICENSE README.md
+          7z a netshield-analyzer-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.zip netshield-analyzer.exe LICENSE README.md
 
       - name: Upload Release Asset (Unix)
         if: matrix.goos != 'windows'
@@ -123,8 +132,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./netshield-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
-          asset_name: netshield-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
+          asset_path: ./netshield-analyzer-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
+          asset_name: netshield-analyzer-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload Release Asset (Windows)
@@ -134,6 +143,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./netshield-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.zip
-          asset_name: netshield-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.zip
+          asset_path: ./netshield-analyzer-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.zip
+          asset_name: netshield-analyzer-${{ needs.release.outputs.version }}-${{ matrix.os }}-${{ matrix.arch }}.zip
           asset_content_type: application/zip
